fix: overflow info container

--- a/assets/styles/body.sass
+++ b/assets/styles/body.sass
@@ -114,7 +114,8 @@ section
   transition: transform $transition-slide
   will-change: transform
   transform: translate3d(0, 100%, 0)
-  min-height: 100vh
+  height: 100vh
+  overflow-y: auto
   &.active
     transform: translate3d(0, 0%, 0)
   p, h1, h2, h3, h4, h5, a
